--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header {
 
   /* box-shadow: 1px 3px 72px 11px rgba(0, 0, 0, 0.69); */
   /* border-radius: 25px; */
-  max-width: 80%;
+  /* max-width: 80%; */
 
   padding-left: 1rem;
   padding-right: 1rem;
