--- a/style.css
+++ b/style.css
@@ -113,3 +113,33 @@ main {
   width: 100%;
   height: 40rem;
 } */
+
+section:nth-of-type(1) {
+  background: url(./img/windy_road.jpg) no-repeat 15% 25% fixed;
+  height: 96vh;
+}
+
+.transform-45 {
+  transform: skew(45);
+}
+
+#amenities-section {
+  display: flex;
+  justify-content: end;
+}
+
+#amenities-diagonal {
+  max-width: 55%;
+  margin: 0;
+  height: 100%;
+  position: relative;
+  left: 5rem;
+  transform: skewX(-10deg);
+}
+
+#amenities {
+  /* margin: 0;
+  max-width: 50em; */
+  transform: skewY(10deg);
+  /* opacity: 0.1; */
+}
