--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body,
@@ -126,9 +127,11 @@ section:nth-of-type(1) {
 #amenities-section {
   display: flex;
   justify-content: end;
+  /* overflow: hidden; */
 }
 
-#amenities-diagonal {
+/* ORIGINAL DIAGONAL SKEW */
+/* #amenities-diagonal {
   max-width: 55%;
   margin: 0;
   height: 100%;
@@ -138,8 +141,26 @@ section:nth-of-type(1) {
 }
 
 #amenities {
-  /* margin: 0;
-  max-width: 50em; */
+ 
   transform: skewY(10deg);
-  /* opacity: 0.1; */
+ 
+} */
+.diagonal-box {
+  /* background-image: linear-gradient(45deg, #6303b1, #ff0099); */
+  transform: skew(-20deg);
+  width: 70%;
+  position: relative;
+  left: 11rem;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  position: relative;
+
+  transform: skew(20deg);
 }
