--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ nav {
 }
 
 header {
+  background: url(./img/reservoir.jpeg) no-repeat center center fixed;
   background: url(./img/landing_placeholder.jpg) no-repeat center center fixed;
   margin: 0 auto;
   height: 96vh;
@@ -69,10 +70,19 @@ header {
   bottom: 5rem;
 }
 .landing-intro {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   animation: 1s ease-in 0s 1 fadeIn;
-  background-color: rgba(0, 167, 225, 0.5);
-  background-color: #0d1b2a;
-  background-color: rgba(13, 27, 42, 0.85);
+  /* background-color: rgba(0, 167, 225, 0.5);*/
+  /* background-color: #0d1b2a; */
+  /* background-color: rgba(13, 27, 42, 0.6); */
+  /* background-color: white; */
+  /* -webkit-text-stroke: 1px black; */
+  backdrop-filter: blur(1px);
+  -webkit-text-stroke: 2px black;
+  font-weight: 800;
+  /* background: rgba(255, 255, 255, 0.3); */
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.6rem;
@@ -86,6 +96,13 @@ header {
 #tour-btn-arrow {
   position: relative;
   top: 0.3rem;
+}
+
+#tour-btn {
+  /* backdrop-filter: blur(10px); */
+  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif; */
+  font-family: Arial, Helvetica, sans-serif;
 }
 main {
   height: 50rem;
@@ -177,6 +194,7 @@ section:nth-of-type(1) {
 }
 
 /********************** FANCY BUTTON EFFECT **********************/
+/**********************  **********************/
 .flash-slide {
   border: medium none;
   display: inline-block;
@@ -212,4 +230,42 @@ section:nth-of-type(1) {
 .flash-slide--blue {
   background: rgb(61, 135, 255);
 }
-/********************** FANCY BUTTON EFFECT **********************/
+
+/************************* HOVER COLOR BUTTON *************************/
+.btn-background-slide {
+  width: 180px;
+  /* padding: 6px; */
+  height: 50px;
+  color: rgb(51, 51, 51);
+  text-align: center;
+  /* position: absolute; */
+  /* top: 50%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  border: 1px solid rgb(51, 51, 51);
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1) 0s;
+  /* transition: filter 0.1s ease-in-out; */
+  cursor: pointer;
+  box-shadow: rgb(51, 51, 51) 0px 0px 0px;
+}
+
+.btn-background-slide:hover {
+  box-shadow: #0d1b2a 8px 8px 0px, #f06543 -8px -8px 0px;
+  border-bottom: 1px solid #0d1b2a;
+  border-right: 1px solid #0d1b2a49;
+}
+
+.btn-background-slide:hover .btn-background-slide-bg {
+  opacity: 1;
+  transform: translateZ(0px);
+}
+
+.btn-background-slide:active {
+  position: relative;
+  /* filter: invert(1); */
+  box-shadow: #246eb9 8px 8px 0px, #f06543 -8px -8px 0px;
+  top: 2px;
+}
+
+/******************************** FANCY BUTTON EFFECT ********************************/
