--- a/style.css
+++ b/style.css
@@ -76,15 +76,11 @@ header {
   font-family: Arial, Helvetica, sans-serif;
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   animation: 1s ease-in 0s 1 fadeIn;
-  /* background-color: rgba(0, 167, 225, 0.5);*/
-  /* background-color: #0d1b2a; */
-  /* background-color: rgba(13, 27, 42, 0.6); */
-  /* background-color: white; */
-  /* -webkit-text-stroke: 1px black; */
+
   backdrop-filter: blur(1px);
   -webkit-text-stroke: 2px black;
   font-weight: 800;
-  /* background: rgba(255, 255, 255, 0.3); */
+
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.6rem;
@@ -101,6 +97,7 @@ header {
 }
 
 section:nth-of-type(1) {
+  /* margin-top: 20rem; */
   background: url(./img/courthouse.jpg) no-repeat,
     linear-gradient(
       180deg,
@@ -139,6 +136,51 @@ section:nth-of-type(1) {
   position: relative;
   top: 0.35rem;
 }
+
+/****************************** SECTION 2 (AMENITIES) ******************************/
+
+section:nth-of-type(2) {
+  margin-top: 5rem;
+  background: url(./img/buhl_julia_bridge.png) no-repeat right,
+    linear-gradient(
+      180deg,
+      rgba(190, 223, 255, 1) 0%,
+      rgba(202, 232, 255, 0.8) 25%,
+      rgba(243, 253, 254, 0.3) 70%
+    );
+
+  height: 96vh;
+  display: flex;
+  justify-content: start;
+}
+.diagonal-box-2 {
+  transform: skew(20deg);
+  width: 70%;
+  position: relative;
+  right: 11rem;
+}
+.deskewed-box-amenities-section {
+  /* position: relative; */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  /* position: relative; */
+  transform: skew(-20deg);
+}
+
+.deskewed-box-amenities-section div {
+  max-width: 63%;
+}
+
+#amenities-button i {
+  position: relative;
+  top: 0.35rem;
+}
+/****************************** SECTION 2 (AMENITIES) END ******************************/
 
 @media only screen and (max-width: 1200px) {
   section:nth-of-type(1) {
@@ -268,3 +310,22 @@ section:nth-of-type(1) {
 }
 
 /******************************** FANCY BUTTON EFFECT ********************************/
+
+.scrollIn {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+
+@media (prefers-reduced-motion) {
+  .scrollIn {
+    transition: none;
+  }
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
