--- a/style.css
+++ b/style.css
@@ -311,6 +311,10 @@ section:nth-of-type(2) {
 
 /******************************** FANCY BUTTON EFFECT ********************************/
 
+/*****************************************************************************************/
+/*****************************************************************************************/
+/*****************************************************************************************/
+/****************************** STAGGERED LOADING ANIMATION ******************************/
 .scrollIn {
   opacity: 0;
   filter: blur(5px);
@@ -329,3 +333,40 @@ section:nth-of-type(2) {
   filter: blur(0);
   transform: translateX(0);
 }
+
+.work-scrollIn-class:nth-of-type(1) {
+  transition-delay: 100ms;
+}
+.work-scrollIn-class:nth-child(2) {
+  transition-delay: 200ms;
+}
+.work-scrollIn-class:nth-child(3) {
+  transition-delay: 300ms;
+}
+.work-scrollIn-class:nth-child(4) {
+  transition-delay: 400ms;
+}
+.work-scrollIn-class:nth-child(5) {
+  transition-delay: 500ms;
+}
+
+.amenities-scrollIn:nth-child(1) {
+  transition-delay: 100ms;
+}
+.amenities-scrollIn:nth-child(2) {
+  transition-delay: 200ms;
+}
+.amenities-scrollIn:nth-child(3) {
+  transition-delay: 300ms;
+}
+.amenities-scrollIn:nth-child(4) {
+  transition-delay: 400ms;
+}
+.amenities-scrollIn:nth-child(5) {
+  transition-delay: 500ms;
+}
+
+/****************************** END STAGGERED ANIMATION ******************************/
+/*************************************************************************************/
+/*************************************************************************************/
+/*************************************************************************************/
