--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ header {
   top: 0.3rem;
 }
 
+/****************************** SECTION 1 (AMENITIES) ******************************/
 section:nth-of-type(1) {
   /* margin-top: 20rem; */
   background: url(./img/courthouse.jpg) no-repeat,
@@ -103,7 +104,7 @@ section:nth-of-type(1) {
       180deg,
       rgba(190, 223, 255, 1) 0%,
       rgba(202, 232, 255, 0.8) 25%,
-      rgba(243, 253, 254, 0.3) 70%
+      rgba(243, 253, 254, 0.3) 60%
     );
   height: 96vh;
   display: flex;
@@ -130,6 +131,10 @@ section:nth-of-type(1) {
 
 .deskewed-box-work-section div {
   max-width: 63%;
+  /* max-width: 65ch; */
+}
+.deskewed-box-work-section div p {
+  max-width: 65ch;
 }
 
 #work-button i {
@@ -141,13 +146,7 @@ section:nth-of-type(1) {
 
 section:nth-of-type(2) {
   margin-top: 5rem;
-  background: url(./img/buhl_julia_bridge.png) no-repeat right,
-    linear-gradient(
-      180deg,
-      rgba(190, 223, 255, 1) 0%,
-      rgba(202, 232, 255, 0.8) 25%,
-      rgba(243, 253, 254, 0.3) 70%
-    );
+  background: url(./img/buhl_julia_bridge.png) no-repeat right;
 
   height: 96vh;
   display: flex;
@@ -168,6 +167,8 @@ section:nth-of-type(2) {
   max-width: 100%;
   height: 100%;
   margin: 0 auto;
+  position: relative;
+  left: 2rem;
   /* position: relative; */
   transform: skew(-20deg);
 }
@@ -176,14 +177,21 @@ section:nth-of-type(2) {
   max-width: 63%;
 }
 
+.deskewed-box-amenities-section div p {
+  max-width: 65ch;
+}
+
 #amenities-button i {
   position: relative;
   top: 0.35rem;
 }
-/****************************** SECTION 2 (AMENITIES) END ******************************/
+/****************************************************************************************/
+
+/*********************************** @Media Queries *************************************/
 
 @media only screen and (max-width: 1200px) {
-  section:nth-of-type(1) {
+  section:nth-of-type(1),
+  section:nth-of-type(2) {
     background: #f8f9fa;
     height: 96vh;
     display: flex;
@@ -191,13 +199,15 @@ section:nth-of-type(2) {
     justify-content: center;
     align-items: center;
   }
-  .diagonal-box-1 {
+  .diagonal-box-1,
+  .diagonal-box-2 {
     transform: skew(0deg);
     width: 100%;
     position: relative;
     left: 0rem;
   }
-  .deskewed-box-work-section {
+  .deskewed-box-work-section,
+  .deskewed-box-amenities-section {
     position: relative;
 
     display: flex;
@@ -209,7 +219,8 @@ section:nth-of-type(2) {
     position: relative;
     transform: skew(0deg);
   }
-  #mobile-picture-1 {
+  #mobile-picture-1,
+  #mobile-picture-2 {
     background: url(./img/courthouse.jpg) no-repeat,
       linear-gradient(
         180deg,
@@ -224,10 +235,15 @@ section:nth-of-type(2) {
 
     display: block;
   }
+
+  #mobile-picture-2 {
+    background: url(./img/buhl_julia_bridge.png) no-repeat center;
+  }
 }
 
 @media only screen and (max-width: 624px) {
-  #work-content-mobile .container {
+  #work-content-mobile .container,
+  #amenities-content-mobile {
     padding-top: 3rem;
     padding-bottom: 3rem;
   }
@@ -334,37 +350,42 @@ section:nth-of-type(2) {
   transform: translateX(0);
 }
 
-.work-scrollIn-class:nth-of-type(1) {
-  transition-delay: 100ms;
-}
-.work-scrollIn-class:nth-child(2) {
-  transition-delay: 200ms;
-}
-.work-scrollIn-class:nth-child(3) {
-  transition-delay: 300ms;
-}
-.work-scrollIn-class:nth-child(4) {
-  transition-delay: 400ms;
-}
-.work-scrollIn-class:nth-child(5) {
-  transition-delay: 500ms;
-}
-
+.work-scrollIn-class:nth-of-type(1),
 .amenities-scrollIn:nth-child(1) {
   transition-delay: 100ms;
 }
+.work-scrollIn-class:nth-child(2),
 .amenities-scrollIn:nth-child(2) {
   transition-delay: 200ms;
 }
+.work-scrollIn-class:nth-child(3),
 .amenities-scrollIn:nth-child(3) {
   transition-delay: 300ms;
 }
+.work-scrollIn-class:nth-child(4),
 .amenities-scrollIn:nth-child(4) {
   transition-delay: 400ms;
 }
+.work-scrollIn-class:nth-child(5),
 .amenities-scrollIn:nth-child(5) {
   transition-delay: 500ms;
 }
+
+/* .amenities-scrollIn:nth-child(1) {
+  transition-delay: 100ms;
+} */
+/* .amenities-scrollIn:nth-child(2) {
+  transition-delay: 200ms;
+} */
+/* .amenities-scrollIn:nth-child(3) {
+  transition-delay: 300ms;
+} */
+/* .amenities-scrollIn:nth-child(4) {
+  transition-delay: 400ms;
+} */
+/* .amenities-scrollIn:nth-child(5) {
+  transition-delay: 500ms;
+} */
 
 /****************************** END STAGGERED ANIMATION ******************************/
 /*************************************************************************************/
