--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ section:nth-of-type(2) {
 section:nth-of-type(3) {
   /* margin-top: 20rem; */
   margin-top: 6rem;
+  margin-bottom: 6rem;
   background: url(./img/family_1.jpg) no-repeat 20%;
   background-position: -10% 60%;
   background-size: 55%;
@@ -229,7 +230,27 @@ section:nth-of-type(3) {
   position: relative;
   top: 0.35rem;
 }
+/****************************** SECTION 4 (Parallax) ******************************/
+section:nth-of-type(4) {
+  background: url(./img/windy_road.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* box-sizing: border-box; */
+  border-top: 5px solid #0d1b2a93;
+  border-bottom: 5px solid #0d1b2a93;
+  box-shadow: 2px 3px 38px 0px rgba(0, 0, 0, 0.75);
 
+  /* border-top: 10px solid #246eb9; */
+  width: 100%;
+  min-height: 35rem;
+}
+
+section:nth-of-type(5) {
+  height: 1000px;
+  width: 100%;
+  background: #f8f9fa;
+}
 /*********************************** @Media Queries *************************************/
 
 @media only screen and (max-width: 1200px) {
@@ -280,6 +301,8 @@ section:nth-of-type(3) {
       );
     padding: 0;
     margin: 0 auto;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
     width: 100%;
     height: 96vh;
 
