Footer First Draft Complete

--- a/style.css
+++ b/style.css
@@ -254,14 +254,29 @@ footer {
   width: 100%;
   background: #f8f9fa;
   background: url(./img/Homegrown.png) no-repeat center, #f06543;
+  box-shadow: 1px 5px 5px 0px rgba(0, 0, 0, 0.75) inset;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
   /* background: #f06543; */
 
-  box-shadow: 1px 5px 5px 0px rgba(0, 0, 0, 0.75) inset;
   /* display: flex; */
 }
 
+footer div {
+  max-width: 65ch;
+  margin-top: 5.5rem;
+}
+
 footer div:nth-of-type(1) {
-  max-width: 35%;
+  margin-left: 5rem;
+  margin-top: 4rem;
+  max-width: 65ch;
+}
+footer div:nth-of-type(2) {
+  margin-right: 5rem;
 }
 
 footer h2 {
@@ -275,17 +290,19 @@ footer h2 {
 
 footer h2 span {
   position: absolute;
-  bottom: 4.5rem;
+  bottom: 5.5rem;
+  left: 0.5rem;
+  transform: rotate(-11deg);
   /* font-size: 1rem; */
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
-#poweredBy {
-  color: #0d1b2a;
-  color: #f8f9fa;
-  /* padding: 0; */
-  /* font-size: 1rem; */
-}
+/* #poweredBy { */
+/* color: #0d1b2a; */
+/* color: #f8f9fa; */
+/* padding: 0; */
+/* font-size: 1rem; */
+/* } */
 
 /* footer div:nth-of-type(2) {
   min-width: 100%;
