--- a/style.css
+++ b/style.css
@@ -70,21 +70,43 @@ header {
 #header-div {
   position: relative;
   bottom: 5rem;
+  /* background: rgba(240, 101, 67, 1); */
+
+  border-radius: 25px;
+  max-width: fit-content;
+  /* transition: 1s ease-in 0s 1 appearFromNot; */
+  border: 1px solid black;
+  backdrop-filter: blur(50px);
 }
+
+/* 0c3227 */
+
+/* @keyframes appearFromNot {
+  0% {
+    width: 10000px;
+    height: 1000px;
+  }
+  100% {
+    width: fit-content;
+    height: auto;
+  }
+} */
 .landing-intro {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  /* font-family: Arial, Helvetica, sans-serif; */
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   animation: 1s ease-in 0s 1 fadeIn;
+  /* animation: 1s ease-in 0s 1 appearFromNot; */
 
-  backdrop-filter: blur(1px);
-  -webkit-text-stroke: 2px black;
+  /* backdrop-filter: blur(10px); */
+  /* -webkit-text-stroke: 2px black; */
   font-weight: 800;
 
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.6rem;
   padding-bottom: 0.6rem;
+  color: #0d1b2a;
 }
 #tour-btn-div {
   justify-self: flex-end !important;
