--- a/style.css
+++ b/style.css
@@ -47,8 +47,12 @@ nav {
 }
 
 header {
-  background: url(./img/reservoir.jpeg) no-repeat center center fixed;
-  background: url(./img/landing_placeholder.jpg) no-repeat center center fixed;
+  /* background: url(./img/reservoir.jpeg) no-repeat center center fixed; */
+
+  background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
+    url(./img/landing_placeholder.jpg) no-repeat center center fixed;
+  /* filter: brightness(50%); */
+  /* background-blend-mode: darken; */
   /* background: url(./img/buhl_kite_field.png) no-repeat center -190px fixed; */
   /* background: url(./img/buhl_activities_building.png) no-repeat center -190px fixed; */
   margin: 0 auto;
@@ -58,6 +62,11 @@ header {
   -o-background-size: cover;
   background-size: cover;
 }
+
+/* header::after {
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+} */
 
 @keyframes fadeIn {
   0% {
@@ -74,9 +83,10 @@ header {
 
   border-radius: 25px;
   max-width: fit-content;
+
   /* transition: 1s ease-in 0s 1 appearFromNot; */
-  border: 1px solid black;
-  backdrop-filter: blur(50px);
+  /* border: 1px solid black; */
+  /* backdrop-filter: blur(50px); */
 }
 
 /* 0c3227 */
@@ -106,7 +116,8 @@ header {
   padding-right: 1rem;
   padding-top: 0.6rem;
   padding-bottom: 0.6rem;
-  color: #0d1b2a;
+  /* color: #0d1b2a; */
+  /* filter: brightness(150%); */
 }
 #tour-btn-div {
   justify-self: flex-end !important;
