Footer @media queries and collapsing flex containers -> black gradient overlay

--- a/style.css
+++ b/style.css
@@ -292,33 +292,32 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
-  /* background: #f06543; */
-
-  /* display: flex; */
 }
 
 footer div {
-  max-width: 65ch;
   margin-top: 5.5rem;
 }
 
 footer div:nth-of-type(1) {
   margin-left: 5rem;
   margin-top: 4rem;
-  max-width: 65ch;
+
+  width: calc(100% / 3);
 }
+
 footer div:nth-of-type(2) {
+  width: calc(100% / 3);
+}
+
+footer div:nth-of-type(3) {
   margin-right: 5rem;
+  width: calc(100% / 3);
 }
 
 footer h2 {
   position: relative;
-  /* top: 4.5rem; */
-  /* background: #f06543; */
   color: #0d1b2a;
   color: #f8f9fa;
-  /* padding: 1rem; */
 }
 
 footer h2 span {
@@ -326,22 +325,55 @@ footer h2 span {
   bottom: 5.5rem;
   left: 0.5rem;
   transform: rotate(-11deg);
-  /* font-size: 1rem; */
-  /* border: 1px solid black; */
 }
 
-/* #poweredBy { */
-/* color: #0d1b2a; */
-/* color: #f8f9fa; */
-/* padding: 0; */
-/* font-size: 1rem; */
-/* } */
-
-/* footer div:nth-of-type(2) {
-  min-width: 100%;
-  min-height: 10rem;
-} */
 /*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+/*********************************** @Media Queries *************************************/
+
+@media only screen and (max-width: 1800px) {
+  footer h2 span {
+    transform: rotate(0deg);
+    bottom: 6rem;
+  }
+}
+@media only screen and (max-width: 1380px) {
+  footer h2 span {
+    transform: rotate(0deg);
+    bottom: 9rem;
+  }
+}
+@media only screen and (max-width: 1330px) {
+  footer h2 span {
+    transform: rotate(0deg);
+    bottom: 5rem;
+    left: 6.6rem;
+  }
+
+  footer div:nth-of-type(1) h2 {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  footer {
+    background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
+      url(./img/Homegrown.png) no-repeat center, #f06543;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 @media only screen and (max-width: 1200px) {
   section:nth-of-type(1),
@@ -416,6 +448,21 @@ footer h2 span {
   }
 }
 
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
+/*****************************************************************/
 /********************** FANCY BUTTON EFFECT **********************/
 /**********************  **********************/
 .flash-slide {
