--- a/style.css
+++ b/style.css
@@ -327,6 +327,48 @@ footer h2 span {
   transform: rotate(-11deg);
 }
 
+form div:nth-of-type(1) {
+  width: 100%;
+  margin-left: 0;
+}
+
+.form-control {
+  /* border: none; */
+  /* border-bottom: 1px solid; */
+  border-radius: 0;
+
+  background-color: #f06543;
+  line-height: 3rem;
+  font-size: 1.8rem;
+  border-color: #362c28;
+  color: #362c28;
+}
+
+.form-control::placeholder {
+  color: #362c28d5;
+}
+
+.btn-outline-secondary {
+  border-color: #362c28;
+  /* border-left: none;
+  border-right: none;
+  border-top: none; */
+  background-color: #0d6efd;
+  font-weight: 700;
+  border-radius: 0;
+  color: #f8f9fa;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.btn-outline-secondary:hover {
+  background-color: #f8f9fa;
+  color: #362c28;
+  border-color: black;
+  /* position: relative; */
+}
+
+/* .btn-outline */
 /*********************************** @Media Queries *************************************/
 /*********************************** @Media Queries *************************************/
 /*********************************** @Media Queries *************************************/
@@ -346,6 +388,14 @@ footer h2 span {
     bottom: 6rem;
   }
 }
+
+@media only screen and (max-width: 1700px) {
+  .form-control {
+    line-height: 1.5rem;
+    font-size: 0.9rem;
+  }
+}
+
 @media only screen and (max-width: 1380px) {
   footer h2 span {
     transform: rotate(0deg);
@@ -373,6 +423,38 @@ footer h2 span {
     justify-content: center;
     align-items: center;
   }
+
+  footer div {
+    margin-top: 0;
+  }
+
+  footer div:nth-of-type(1) {
+    margin: 0;
+
+    width: 100%;
+  }
+
+  footer div:nth-of-type(2) {
+    width: 100%;
+  }
+
+  footer div:nth-of-type(3) {
+    margin: 0;
+    width: 100%;
+  }
+
+  footer h2 {
+    position: relative;
+
+    color: #f8f9fa;
+  }
+
+  /* footer h2 span {
+    position: absolute;
+    bottom: 5.5rem;
+    left: 0.5rem;
+    transform: rotate(-11deg);
+  } */
 }
 
 @media only screen and (max-width: 1200px) {
