Added JS for navbar hiding on scroll down

--- a/style.css
+++ b/style.css
@@ -809,3 +809,16 @@ form div:nth-of-type(1) {
 /*************************************************************************************/
 /*************************************************************************************/
 /*************************************************************************************/
+
+.transparent-background {
+  background-color: rgba(0, 0, 0, 0);
+
+  opacity: 0;
+  /* background-color: #f8f9fa00; */
+  /* background-color: black !important; */
+}
+
+.solid-background {
+  opacity: 1;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+}
