--- a/style.css
+++ b/style.css
@@ -558,6 +558,15 @@ form div:nth-of-type(1) {
     justify-content: center;
     align-items: center;
   }
+
+  section:neth-of-type(4) {
+    background: url(./img/windy_road.jpg) scroll center center;
+
+    /* background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed; */
+  }
+
   .diagonal-box-1,
   .diagonal-box-2,
   .diagonal-box-3 {
