--- a/style.css
+++ b/style.css
@@ -108,15 +108,17 @@ header {
   animation: 1s ease-in 0s 1 fadeIn;
   /* animation: 1s ease-in 0s 1 appearFromNot; */
 
-  /* backdrop-filter: blur(10px); */
+  backdrop-filter: blur(1px);
   /* -webkit-text-stroke: 2px black; */
-  font-weight: 800;
+  /* font-weight: 800; */
 
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.6rem;
   padding-bottom: 0.6rem;
   font-size: 6.5rem;
+  font-weight: 500;
+  /* font-size: 2.2rem; */
   /* color: #0d1b2a; */
   /* filter: brightness(150%); */
 }
@@ -649,6 +651,9 @@ form div:nth-of-type(1) {
 }
 
 @media only screen and (max-width: 624px) {
+  header h1.landing-intro {
+    font-size: 4rem;
+  }
   #work-content-mobile .container,
   #amenities-content-mobile .container,
   #live-content-mobile .container {
