Add font. Add script to main page to remove nav on mobile on page load (until user scrolls)

--- a/css/styles/work.css
+++ b/css/styles/work.css
@@ -1,5 +1,7 @@
 :root {
-  --font-family: 'Quicksand', sans-serif;
+  /* --font-family: 'Quicksand', sans-serif; */
+  --font-family: 'Quattrocento Sans', sans-serif;
+  /* font-family: 'Quattrocento Sans', sans-serif; */
   --vibrant-orange: #f06543;
   --soft-white: #f8f9fa;
 }
