--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --font-family: 'Quicksand', sans-serif;
+  --font-family-two: 'Quattrocento Sans', sans-serif;
 }
 
 html {
@@ -105,6 +106,7 @@ header {
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
   /* font-family: Arial, Helvetica, sans-serif; */
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+  font-family: var(--font-family-two);
   animation: 1s ease-in 0s 1 fadeIn;
   /* animation: 1s ease-in 0s 1 appearFromNot; */
 
@@ -116,8 +118,8 @@ header {
   padding-right: 1rem;
   padding-top: 0.6rem;
   padding-bottom: 0.6rem;
-  font-size: 6.5rem;
-  font-weight: 500;
+  font-size: 7.5rem;
+  font-weight: 900;
   /* font-size: 2.2rem; */
   /* color: #0d1b2a; */
   /* filter: brightness(150%); */
