--- a/css/styles/work.css
+++ b/css/styles/work.css
@@ -4,6 +4,10 @@
   /* font-family: 'Quattrocento Sans', sans-serif; */
   --vibrant-orange: #f06543;
   --soft-white: #f8f9fa;
+  --mobile-padding-X: 1rem;
+  --numeric-values-font-size: 6rem;
+  --numeric-h2-font-size: 4rem;
+  --section-margin-y: 6rem;
 }
 
 html,
@@ -81,6 +85,8 @@ h1.display-1 {
 
 main {
   background-color: var(--vibrant-orange);
+  margin-top: var(--section-margin-y);
+  margin-bottom: var(--section-margin-y);
   height: 70vh;
   width: 100%;
   display: flex;
@@ -97,10 +103,29 @@ main div {
   flex-wrap: wrap;
   /* flex-basis: 60ch; */
 }
-main div h2:nth-of-type(2) {
-  padding-bottom: 3rem;
-  padding-top: 3rem;
+
+main div h2.display-2 {
+  padding-left: var(--mobile-padding-X);
+  padding-right: var(--mobile-padding-X);
+  font-size: var(--numeric-h2-font-size);
 }
+main div h2:nth-of-type(2) {
+  padding-bottom: 4rem;
+  padding-top: 4rem;
+}
+
+/* main div h2 span {
+} */
+
+.numericals {
+  display: inline-block;
+  min-width: 20%;
+  font-size: var(--numeric-values-font-size);
+}
+
+/* #two {
+  min-width: 10%;
+} */
 
 /* main div:nth-of-type(1) {
 } */
