--- a/css/styles/work.css
+++ b/css/styles/work.css
@@ -129,3 +129,9 @@ main div h2:nth-of-type(2) {
 
 /* main div:nth-of-type(1) {
 } */
+
+@media only screen and (max-width: 980px) {
+  header {
+    align-items: flex-start;
+  }
+}
