--- a/css/styles/work.css
+++ b/css/styles/work.css
@@ -13,8 +13,11 @@
 html,
 body {
   font-family: var(--font-family);
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
+  scroll-behavior: auto;
+  /* scroll-snap-type: both; */
   overflow-x: hidden;
+  /* font-size: 0.5rem; */
 }
 
 nav {
