--- a/css/styles/work.css
+++ b/css/styles/work.css
@@ -4,7 +4,9 @@
   /* font-family: 'Quattrocento Sans', sans-serif; */
   --vibrant-orange: #f06543;
   --soft-white: #f8f9fa;
+  --padding-t: 7rem;
   --mobile-padding-X: 1rem;
+
   --numeric-values-font-size: 6rem;
   --numeric-h2-font-size: 4rem;
   --section-margin-y: 6rem;
@@ -96,7 +98,7 @@ main {
   background-color: var(--vibrant-orange);
   margin-top: var(--section-margin-y);
   margin-bottom: var(--section-margin-y);
-  height: 70vh;
+  /* height: 70vh; */
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -118,9 +120,16 @@ main div h2.display-2 {
   padding-right: var(--mobile-padding-X);
   font-size: var(--numeric-h2-font-size);
 }
+
+main div h2:nth-of-type(1) {
+  padding-top: var(--padding-t);
+}
 main div h2:nth-of-type(2) {
-  padding-bottom: 4rem;
-  padding-top: 4rem;
+  padding-bottom: var(--padding-t);
+  padding-top: var(--padding-t);
+}
+main div h2:nth-of-type(3) {
+  padding-bottom: var(--padding-t);
 }
 
 /* main div h2 span {
